--- a/blog.html
+++ b/blog.html
@@ -157,7 +157,7 @@
             <div class="appointment-form">
                 <form method="post" action="http://sitetemplate.demo.ithemeslab.com/fizcon/contact.html">
                     <div class="form-group">
-                        <input type="text" name="text" value="" placeholder="Name" required>
+                        <input type="text" name="text" value="" placeholder="User Name" required>
                     </div>
                     <div class="form-group">
                         <input type="email" name="email" value="" placeholder="Email Address" required>
